MCA-1417 implementing the route "create racing event has image relationship"
