# specification/OpenAPI/more-cars.openapi.json
@@ -5342,6 +5342,59 @@
         }
       }
     },
+    "/racing-events/{racing-event-id}/has-image/{image-id}": {
+      "post": {
+        "tags": [
+          "Racing Events"
+        ],
+        "summary": "Creates a ›has-image‹ relationship between the `Racing Event` and the `Image`",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "racing-event-id",
+            "description": "ID of the `Racing Event`",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "in": "path",
+            "name": "image-id",
+            "description": "ID of the `Image`",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Relationship ›has-image‹ between `Racing Event` and `Image` successfully created.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RacingEventHasImageResponse"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "The relationship ›has-image‹ between `Racing Event` and `Image` already exists."
+          },
+          "404": {
+            "description": "Request failed. `Racing Event` and/or `Image` could not be found in the database.",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/relationships/{relationship-id}": {
       "get": {
         "tags": [
@@ -7717,6 +7770,56 @@
         "properties": {
           "data": {
             "$ref": "#/components/schemas/RacingEventUsedTheTrackLayout"
+          }
+        }
+      },
+      "RacingEventHasImage": {
+        "type": "object",
+        "required": [],
+        "properties": {
+          "relationship_id": {
+            "type": "integer",
+            "readOnly": true,
+            "example": "123456"
+          },
+          "relationship_name": {
+            "type": "string",
+            "readOnly": true,
+            "example": "has-image"
+          },
+          "relationship_partner": {
+            "type": "object",
+            "properties": {
+              "node_type": {
+                "type": "string",
+                "example": "image"
+              },
+              "data": {
+                "$ref": "#/components/schemas/Image"
+              }
+            }
+          },
+          "created_at": {
+            "type": "string",
+            "readOnly": true,
+            "description": "Timestamp for when this relationship was created. Generated by the system. Cannot be changed.",
+            "format": "date-time",
+            "example": "2025-05-14T11:05:07.793Z"
+          },
+          "updated_at": {
+            "type": "string",
+            "readOnly": true,
+            "description": "Timestamp for when this relationship was last modified. Generated by the system.",
+            "format": "date-time",
+            "example": "2025-05-14T11:05:07.793Z"
+          }
+        }
+      },
+      "RacingEventHasImageResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/RacingEventHasImage"
           }
         }
       },
