# src/controllers/racing-events/createHasImageRelation.ts
@@ -1,0 +1,31 @@
+import express from "express"
+import {RacingEvent} from "../../models/racing-events/RacingEvent"
+import {marshalRelation} from "../relationships/marshalRelation"
+import {NodeTypeEnum} from "../nodes/types/NodeTypeEnum"
+import {NodeNotFoundError} from "../../models/types/NodeNotFoundError"
+import {RelationshipAlreadyExistsError} from "../../models/types/RelationshipAlreadyExistsError"
+import {sendResponse201} from "../responses/sendResponse201"
+import {sendResponse304} from "../responses/sendResponse304"
+import {sendResponse404} from "../responses/sendResponse404"
+import {sendResponse500} from "../responses/sendResponse500"
+
+export async function createHasImageRelation(req: express.Request, res: express.Response) {
+    const racingEventId = parseInt(req.params.racingEventId)
+    const imageId = parseInt(req.params.imageId)
+
+    try {
+        const relation = await RacingEvent.createHasImageRelationship(racingEventId, imageId)
+        const marshalledData = marshalRelation(relation, NodeTypeEnum.IMAGE)
+
+        return sendResponse201(marshalledData, res)
+    } catch (e) {
+        if (e instanceof NodeNotFoundError) {
+            return sendResponse404(res)
+        } else if (e instanceof RelationshipAlreadyExistsError) {
+            return sendResponse304(res)
+        } else {
+            console.error(e)
+            return sendResponse500(res)
+        }
+    }
+}
