# src/db/types/DbRelationship.ts
@@ -36,4 +36,5 @@ export enum DbRelationship {
     RacingEventFollowsEvent = 'IS_FOLLOWED_BY_EVENT',
     RacingEventTookPlaceAtRaceTrack = 'TOOK_PLACE_AT_RACE_TRACK',
     RacingEventUsedTheTrackLayout = 'USED_THE_TRACK_LAYOUT',
+    RacingEventHasImage = 'HAS_IMAGE',
 }
