# src/models/relationships/types/RelationshipType.ts
@@ -25,5 +25,6 @@ export enum RelationshipType {
     RacingEventFollowsEvent = 'FOLLOWS_EVENT',
     RacingEventTookPlaceAtRaceTrack = 'TOOK_PLACE_AT_RACE_TRACK',
     RacingEventUsedTheTrackLayout = 'USED_THE_TRACK_LAYOUT',
+    RacingEventHasImage = 'HAS_IMAGE',
     ImageBelongsToNode = 'BELONGS_TO_NODE',
 }
